# VoxelGame3DCpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  RELEASE_NOTES.md  build_log10.txt  build_log2.txt  build_log4.txt  build_log5.txt  build_log6.txt  generate_atlas.cpp  imgui.ini  inspect.cpp  inspect_color.cpp
.antigravityrules/: README.md
.github/workflows/: c-cpp.yml
Docs/: PerformanceAnalysis.md  WorldGenerationV2.md
docs/: BUILD-AND-RUN.md  roadmap.md
include/: Biome.hpp  Camera.hpp  Chunk.hpp  ChunkManager.hpp  Config.hpp  Shader.hpp  TextureAtlas.hpp  WorldManager.hpp
roadmap-and-instructions/: PROJECT-INSTRUCTIONS.md  roadmap.md
saves/My_Beautiful_World_1337/: meta.txt  player.txt
shaders/: basic.frag  basic.vert  cloud.frag  cloud.vert  player.frag  player.vert  shadow.frag  shadow.vert
src/: Biome.cpp  Camera.cpp  Chunk.cpp  ChunkManager.cpp  Config.cpp  Inventory.cpp  Main.cpp  Shader.cpp  Texture.cpp  TextureAtlas.cpp  WorldManager.cpp
src/core/: Config.cpp  Config.hpp  Main.cpp
src/game/: InputManager.cpp  InputManager.hpp  Inventory.cpp  Inventory.hpp
src/renderer/: Camera.cpp  Camera.hpp  PlayerRenderer.cpp  PlayerRenderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  TextureAtlas.cpp  TextureAtlas.hpp
src/world/: Biome.cpp  Biome.hpp  BlockRegistry.cpp  BlockRegistry.hpp  Chunk.cpp  Chunk.hpp  ChunkManager.cpp  ChunkManager.hpp  WorldManager.cpp  WorldManager.hpp
